force-app/main/default/objects/MessagingSession/fields/HDFC_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>HDFC_Customer_Email__c</fullName>
    <label>HDFC_Customer_Email</label>
    <type>Email</type>
</CustomField>