force-app/main/default/objects/MessagingSession/fields/HDFC_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>HDFC_Customer_Name__c</fullName>
    <label>HDFC Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>