force-app/main/default/objects/MessagingSession/fields/Highest_Education__c.field-meta.xml
<CustomField>
    <fullName>Highest_Education__c</fullName>
    <label>Highest Education</label>
    <length>255</length>
    <type>Text</type>
</CustomField>