force-app/main/default/objects/MessagingSession/fields/Session_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Session_CSAT__c</fullName>
    <label>Session CSAT</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>