force-app/main/default/objects/MessagingSession/fields/Session_Summary__c.field-meta.xml
<CustomField>
    <fullName>Session_Summary__c</fullName>
    <label>Session Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>