force-app/main/default/objects/MessagingSession/fields/subject_from_live_chat__c.field-meta.xml
<CustomField>
    <fullName>subject_from_live_chat__c</fullName>
    <label>subject from live chat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>