force-app/main/default/objects/MessagingSession/listViews/HDFC_Messaging_Session_MessagingSession.listView-meta.xml
<ListView>
    <fullName>HDFC_Messaging_Session_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>HDFC Messaging Session</label>
    <queue>HDFC_Messaging_Session</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>