force-app/main/default/objects/MessagingSession/listViews/Messaging_My_Service_Agent_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Messaging_My_Service_Agent_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Messaging My Service Agent</label>
    <queue>Messaging_My_Service_Agent</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>