force-app/main/default/objects/MessagingSession/listViews/New_Live_Chat_Testing_MessagingSession.listView-meta.xml
<ListView>
    <fullName>New_Live_Chat_Testing_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>New Live Chat Testing</label>
    <queue>New_Live_Chat_Testing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>