force-app/main/default/objects/MessagingSession/listViews/TMC_Customer_Care_Queue_MessagingSession.listView-meta.xml
<ListView>
    <fullName>TMC_Customer_Care_Queue_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>TMC Customer Care Queue</label>
    <queue>TMC_Customer_Care_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>